Removed dumb filler text

--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="assets/css/app.css">
 	</head>
 	<body>
-		<div><span style="color:#ff0000;">#</span><span style="color:#ff7f00;">H</span><span style="color:#ffff00;">a</span><span style="color:#80ff00;">c</span><span style="color:#00ff00;">k</span><span style="color:#00ffff;">e</span><span style="color:#0000ff;">d</span></div>	
+		<div><p>Press CTRl + F1 to take a screenshot</p></div>
 	</body>
 	<script type="text/javascript" src="assets/js/screenshot.js"></script>
 	<script type="text/javascript" src="assets/js/window.js"></script>
