--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,12 @@
 <html>
 	<head>
-		<title>Screenshot</title>
+		<title>Node Screenshot</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/app.css">
 	</head>
-	<body>
-		<div><span style="color:#ff0000;">#</span><span style="color:#ff7f00;">H</span><span style="color:#ffff00;">a</span><span style="color:#80ff00;">c</span><span style="color:#00ff00;">k</span><span style="color:#00ffff;">e</span><span style="color:#0000ff;">d</span></div>	
-	</body>
-	<script type="text/javascript" src="assets/js/screenshot.js"></script>
-	<script type="text/javascript" src="assets/js/window.js"></script>
-	<script type="text/javascript" src="assets/js/app.js"></script>
+	<body></body>
+	<script type="text/javascript" src="assets/js/init.js"></script>
+	<script type="text/javascript" src="assets/js/application.js"></script>
+	<script type="text/javascript" src="assets/js/shortcut.js"></script>
+	<script type="text/javascript" src="assets/js/tray.js"></script>
 </html>
